@@ -370,7 +370,7 @@ were multiplied with the mask's resulting mask values.</p>
       <td><dfn>mask-image</dfn>
     <tr>
       <th><a href="#values">Value</a>:
-      <td><var>&lt;mask-reference&gt;</var>#
+      <td><var>&lt;mask-reference&gt;</var>
     <tr>
       <th>Initial:
       <td>none
@@ -399,15 +399,15 @@ are drawn with the first specified one on top (closest to the user)
 and each subsequent image behind the previous one.
 Where:
 
-<pre class=prod><var><dfn>&lt;mask-reference&gt;</dfn></var> = <var>&lt;mask-source&gt;</var> | <var>&lt;mask-image&gt;</var></pre>
+<pre class=prod><var><dfn>&lt;mask-reference&gt;</dfn></var> = <var>&lt;mask-image&gt;</var># | <var>&lt;mask-element&gt;</var></pre>
 
 <pre class=prod><var><dfn>&lt;mask-image&gt;</dfn></var> = <var>&lt;image&gt;</var> | none </pre>
 
-<pre class=prod><var><dfn>&lt;mask-source&gt;</dfn></var> = <var>&lt;url&gt;</var> | <var>child</var> | <var>&lt;child-selector&gt;</var></pre>
+<pre class=prod><var><dfn>&lt;mask-element&gt;</dfn></var> = <var>&lt;url&gt;</var> | <var>child</var> | <var>&lt;child-selector&gt;</var></pre>
 
 <pre class=prod><dfn>&lt;child-selector&gt;</dfn> = select(<var>&lt;compound-selector&gt;</var>#)</pre>
 
-<p class="note">A <var>&lt;mask-source&gt;</var> can just be specified as a single value and can not contibute to a list of <var>&lt;mask-reference&gt;</var> values. Otherwise the specified value of the property is invalid. (See examples below.)</p>
+<p class="note">A <var>&lt;mask-element&gt;</var> can just be specified as a single value and can not contibute to a list of <var>&lt;mask-reference&gt;</var> values. Otherwise the specified value of the property is invalid. (See examples below.)</p>
 
 <dl>
   <dt>
