@@ -11,11 +11,11 @@
    rel=dcterms.rights>
   <meta content="CSS Masking" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2012-12-21 name=dcterms.issued>
+  <meta content=2013-01-08 name=dcterms.issued>
   <meta content="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html"
    name=dcterms.creator>
   <meta content=W3C name=dcterms.publisher>
-  <meta content="http://www.w3.org/TR/2012/ED-css-masking-20121221/"
+  <meta content="http://www.w3.org/TR/2013/ED-css-masking-20130108/"
    name=dcterms.identifier>
   <link href="#contents" rel=contents>
   <link href="#index" rel=index>
@@ -30,15 +30,14 @@
 
    <h1>CSS Masking</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 21 December
-    2012</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 8 January 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-css-masking-20121221/-->
+     <!--http://www.w3.org/TR/2013/WD-css-masking-20130108/-->
 
     <dt>Latest version:
 
@@ -67,7 +66,7 @@
    <!--begin-copyright-->
    <p class=copyright><a
     href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright"
-    rel=license>Copyright</a> © 2012 <a href="http://www.w3.org/"><abbr
+    rel=license>Copyright</a> © 2013 <a href="http://www.w3.org/"><abbr
     title="World Wide Web Consortium">W3C</abbr></a><sup>®</sup> (<a
     href="http://www.csail.mit.edu/"><abbr
     title="Massachusetts Institute of Technology">MIT</abbr></a>, <a
@@ -614,7 +613,7 @@ mask-repeat: no-repeat<strong>, no-repeat, no-repeat</strong>;
     <tr>
      <th><a href="#values">Value</a>:
 
-     <td><a href="#ltmask-referencegt"><var>&lt;mask-reference&gt;</var></a>#
+     <td><a href="#ltmask-referencegt"><var>&lt;mask-reference&gt;</var></a>
 
     <tr>
      <th>Initial:
@@ -662,15 +661,15 @@ mask-repeat: no-repeat<strong>, no-repeat, no-repeat</strong>;
 
   <pre class=prod><var><dfn
    id=ltmask-referencegt>&lt;mask-reference&gt;</dfn></var> = <a
-   href="#ltmask-sourcegt"><var>&lt;mask-source&gt;</var></a> | <a
-   href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a></pre>
+   href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a># | <a
+   href="#ltmask-elementgt"><var>&lt;mask-element&gt;</var></a></pre>
 
   <pre class=prod><var><dfn
    id=ltmask-imagegt>&lt;mask-image&gt;</dfn></var> = <a
    href="#ltimagegt"><var>&lt;image&gt;</var></a> | none </pre>
 
   <pre class=prod><var><dfn
-   id=ltmask-sourcegt>&lt;mask-source&gt;</dfn></var> = <a
+   id=ltmask-elementgt>&lt;mask-element&gt;</dfn></var> = <a
    href="#lturlgt"><var>&lt;url&gt;</var></a> | <a
    href="#child"><var>child</var></a> | <a
    href="#ltchild-selectorgt0"><var>&lt;child-selector&gt;</var></a></pre>
@@ -680,7 +679,7 @@ mask-repeat: no-repeat<strong>, no-repeat, no-repeat</strong>;
    href="#ltcompound-selectorgt"><var>&lt;compound-selector&gt;</var></a>#)</pre>
 
   <p class=note>A <a
-   href="#ltmask-sourcegt"><var>&lt;mask-source&gt;</var></a> can just be
+   href="#ltmask-elementgt"><var>&lt;mask-element&gt;</var></a> can just be
    specified as a single value and can not contibute to a list of <a
    href="#ltmask-referencegt"><var>&lt;mask-reference&gt;</var></a> values.
    Otherwise the specified value of the property is invalid. (See examples
@@ -738,8 +737,8 @@ mask-repeat: no-repeat<strong>, no-repeat, no-repeat</strong>;
   <p class=note>If the URI in the ‘<code class=css>url()</code>’ function
    has a fragment identifier, the <a
    href="#ltmask-referencegt"><var>&lt;mask-reference&gt;</var></a> is
-   treated as <a href="#ltmask-sourcegt"><var>&lt;mask-source&gt;</var></a>,
-   otherwise as <a href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a>.
+   treated as <var>&lt;mask-source&gt;</var>, otherwise as <a
+   href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a>.
 
   <p>An invalid or non-existent mask source is ignored and no masking is
    applied.
@@ -776,9 +775,8 @@ p { mask-image: url(#mask), url(tl.png) }
 img { mask-image: url(#mask), url(resources.svg#mask2) }
 </pre>
 
-   <p>A <a href="#ltmask-sourcegt"><var>&lt;mask-source&gt;</var></a> value
-    that is either used together with another <a
-    href="#ltmask-sourcegt"><var>&lt;mask-source&gt;</var></a> value or an <a
+   <p>A <var>&lt;mask-source&gt;</var> value that is either used together
+    with another <var>&lt;mask-source&gt;</var> value or an <a
     href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a> value makes the
     whole specified ‘<a href="#mask-image"><code
     class=property>mask-image</code></a>’ value list invalid.
@@ -878,9 +876,8 @@ img { mask-image: url(#mask), url(resources.svg#mask2) }
     <p> If the <a
      href="#ltmask-referencegt"><var>&lt;mask-reference&gt;</var></a> of the
      ‘<a href="#mask-image"><code class=property>mask-image</code></a>’
-     property is of type <a
-     href="#ltmask-sourcegt"><var>&lt;mask-source&gt;</var></a> the alpha
-     values of the mask image should be used as the mask values.
+     property is of type <var>&lt;mask-source&gt;</var> the alpha values of
+     the mask image should be used as the mask values.
   </dl>
 
   <div class=example>
@@ -4409,6 +4406,9 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    <li>mask-clip, <a href="#mask-clip"
     title="section 6.5."><strong>6.5.</strong></a>
 
+   <li>&lt;mask-element&gt;, <a href="#ltmask-elementgt"
+    title="section 6.1."><strong>6.1.</strong></a>
+
    <li>&lt;mask-image&gt;, <a href="#ltmask-imagegt"
     title="section 6.1."><strong>6.1.</strong></a>
 
@@ -4453,9 +4453,6 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
 
    <li>mask-size, <a href="#mask-size"
     title="section 6.7."><strong>6.7.</strong></a>
-
-   <li>&lt;mask-source&gt;, <a href="#ltmask-sourcegt"
-    title="section 6.1."><strong>6.1.</strong></a>
 
    <li>mask source, <a href="#mask-source"
     title="section 4."><strong>4.</strong></a>
@@ -4822,7 +4819,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
     <tr>
      <th><a class=property href="#mask-image">mask-image</a>
 
-     <td>&lt;mask-reference&gt;#
+     <td>&lt;mask-reference&gt;
 
      <td>none
 
