@@ -1,3 +1,6 @@
+2012-01-08 dschulze@adobe.com
+	Fixed syntax for 'mask-image' property.
+
 2012-12-21 dschulze@adobe.com
 	Fixed some typos and examples.
 
